// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BillingAddressForm check children /> 1`] = `
<form
  autoComplete="on"
/>
`;

exports[`<BillingAddressForm proptypes required /> 1`] = `
<form
  autoComplete="on"
/>
`;

exports[`<BillingAddressForm/> 1`] = `
<form
  autoComplete="on"
>
  <div>
    test
  </div>
</form>
`;
